# bitcoin-indicator

./: .travis.yml  CMakeLists.txt  README.md  bitcoin-indicator.desktop  bitcoin.py  bitcoin_test.py  indicator-bitcoin  indicator-bitcoin.desktop  makedeb  requirements.txt
cryptocurrency/: __init__.py  cryptocurrency.py
currency/: __init__.py  base_currency.py  bitcoin.py  bitcoin_test.py  ripple.py  ripple_test.py
exchange/: __init__.py  bitstamp.py  bitstamp_test.py
interface/: __init__.py  indicator.py  menu.py  menu_item.py  query_loop.py  query_loop_test.py
