PROJECT( indicator-bitcoin C )
CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

SET( APP_VER_MAJOR 2 )
SET( APP_VER_MINOR 0 )
SET( APP_VER_PATCH 0 )
SET( APP_VERSION ${APP_VER_MAJOR}.${APP_VER_MINOR}.${APP_VER_PATCH} )

MESSAGE( "Building version: ${APP_VERSION}..." )

SET( CPACK_PACKAGE_VENDOR              "Ricardo Velhote")
SET( CPACK_PACKAGE_CONTACT             "rvelhote@gmail.com")
SET( CPACK_PACKAGE_DESCRIPTION         "Bitcoin price indicator for Ubuntu based on most up-to-date price on Bitstamp")
SET( CPACK_PACKAGE_DESCRIPTION_SUMMARY "Bitcoin price Indicator for Ubuntu")
SET( CPACK_PACKAGE_NAME                "indicator-bitcoin")
SET( CPACK_PACKAGE_VERSION             ${APP_VERSION})
SET( CPACK_PACKAGE_VERSION_MAJOR       ${APP_VER_MAJOR})
SET( CPACK_PACKAGE_VERSION_MINOR       ${APP_VER_MINOR})
SET( CPACK_PACKAGE_VERSION_PATCH       ${APP_VER_PATCH})
SET( CPACK_DEBIAN_PACKAGE_SECTION      "python")
SET( CPACK_SYSTEM_NAME                 "noarch" )
SET( CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all" )
SET( CPACK_DEBIAN_PACKAGE_PRIORITY     "optional")
SET( CPACK_DEBIAN_PACKAGE_MAINTAINER   "Ricardo Velhote <rvelhote@gmail.com>")
SET( CPACK_DEBIAN_PACKAGE_DEPENDS      "python, python-gi, gir1.2-appindicator3-0.1")
SET( CPACK_GENERATOR                   "DEB")

INCLUDE( CPack )

INSTALL( PROGRAMS  indicator-bitcoin                DESTINATION /usr/share/indicator-bitcoin)
INSTALL( DIRECTORY cryptocurrency                   DESTINATION /usr/share/indicator-bitcoin)
INSTALL( DIRECTORY interface                        DESTINATION /usr/share/indicator-bitcoin)
INSTALL( DIRECTORY icons                            DESTINATION /usr/share/indicator-bitcoin)
INSTALL( FILES     indicator-bitcoin.desktop        DESTINATION /usr/share/applications/)
INSTALL( FILES     indicator-bitcoin.desktop        DESTINATION /etc/xdg/autostart/)
